Renomeação entity e parte de aluno