@@ -1,22 +1,22 @@
 package com.personal.services;
 
 import com.personal.dtos.request.MetricasExerciciosRequestDto;
-import com.personal.dtos.request.TreinoRequestDto;
 import com.personal.dtos.request.PlanejamentoTreinoRequestDto;
+import com.personal.dtos.request.TreinoRequestDto;
 import com.personal.dtos.response.PlanejamentoTreinoResponseDto;
-import com.personal.entities.MetricasExercicioEntitie;
-import com.personal.entities.TreinoEntitie;
-import com.personal.entities.PlanejamentoTreinoEntitie;
+import com.personal.entities.MetricasExercicioEntity;
+import com.personal.entities.PlanejamentoTreinoEntity;
+import com.personal.entities.TreinoEntity;
 import com.personal.exceptions.EventNotFoundException;
 import com.personal.repositories.PlanejamentoTreinoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -25,19 +25,21 @@ public class PlanejamentoTreinoService {
     private PlanejamentoTreinoRepository repository;
 
     @Autowired
-    private UserService userService;
+    private AlunoService alunoService;
 
     @Autowired
     private ExercicioService exercicioService;
 
     public void create(PlanejamentoTreinoRequestDto dto) {
-        PlanejamentoTreinoEntitie planejamentoTreinoEntitie = PlanejamentoTreinoEntitie.builder()
+        PlanejamentoTreinoEntity planejamentoTreinoEntity = PlanejamentoTreinoEntity.builder()
                 .dataInicialPlano(dto.getDataInicialPlano())
                 .dataFinalPlano(dto.getDataFinalPlano())
-                .user(userService.recuperarPorId(dto.getUserId()))
+                .aluno(alunoService.recuperarPorId(dto.getAlunoId()))
                 .build();
-        planejamentoTreinoEntitie.setTreinoEntities(buildTrainings(planejamentoTreinoEntitie, dto.getTreinos()));
-        repository.save(planejamentoTreinoEntitie);
+
+        buildTrainings(planejamentoTreinoEntity, dto.getTreinos());
+
+        repository.save(planejamentoTreinoEntity);
     }
 
     public List<PlanejamentoTreinoResponseDto> findAll() {
@@ -45,25 +47,26 @@ public class PlanejamentoTreinoService {
     }
 
     public PlanejamentoTreinoResponseDto findById(Long id) {
-        Optional<PlanejamentoTreinoEntitie> Training = repository.findById(id);
+        Optional<PlanejamentoTreinoEntity> Training = repository.findById(id);
         return new PlanejamentoTreinoResponseDto(Training.get());
     }
 
-    public PlanejamentoTreinoEntitie recuperarPorId(Long id) {
+    public PlanejamentoTreinoEntity recuperarPorId(Long id) {
         return repository.findById(id).orElseThrow(() -> new RuntimeException("Planejamento não encontrado"));
     }
 
     public void update(Long id, PlanejamentoTreinoRequestDto dto) {
-        PlanejamentoTreinoEntitie planejamentoTreinoEntitie = recuperarPorId(id);
-        planejamentoTreinoEntitie.setDataInicialPlano(dto.getDataInicialPlano());
-        planejamentoTreinoEntitie.setDataFinalPlano(dto.getDataFinalPlano());
-        planejamentoTreinoEntitie.setUser(userService.recuperarPorId(dto.getUserId()));
-        repository.save(planejamentoTreinoEntitie);
+        PlanejamentoTreinoEntity planejamentoTreinoEntity = recuperarPorId(id);
+        planejamentoTreinoEntity.setDataInicialPlano(dto.getDataInicialPlano());
+        planejamentoTreinoEntity.setDataFinalPlano(dto.getDataFinalPlano());
+        planejamentoTreinoEntity.setUser(userService.recuperarPorId(dto.getUserId()));
+        buildTrainings(planejamentoTreinoEntity, dto.getTreinos());
+        repository.save(planejamentoTreinoEntity);
     }
 
     public Long delete(@PathVariable Long id) {
 
-        Optional<PlanejamentoTreinoEntitie> opexercise = repository.findById(id);
+        Optional<PlanejamentoTreinoEntity> opexercise = repository.findById(id);
         if (opexercise.isEmpty()) {
             throw new EventNotFoundException("Nao Existe");
         }
@@ -72,28 +75,45 @@ public class PlanejamentoTreinoService {
         return id;
     }
 
-    private List<TreinoEntitie> buildTrainings(PlanejamentoTreinoEntitie planejamentoTreinoEntitie, List<TreinoRequestDto> trainings) {
-        return trainings.stream().map(training -> {
-            TreinoEntitie treinoEntitieItem = TreinoEntitie.builder()
-                    .planejamentoTreinoEntitie(planejamentoTreinoEntitie)
-                    .descricao(training.getDescricao())
-                    .build();
-            treinoEntitieItem.setMetricasExercicio(buildExerciseMetrics(treinoEntitieItem, training.getMetricasExercicios()));
-            return treinoEntitieItem;
-        }).collect(Collectors.toList());
+    private void buildTrainings(PlanejamentoTreinoEntity planejamentoTreinoEntity, List<TreinoRequestDto> treinos) {
+
+        if (!CollectionUtils.isEmpty(treinos)) {
+
+            List<TreinoEntity> treinoEntities = treinos.stream().map(treino -> {
+                TreinoEntity treinoItem = TreinoEntity.builder()
+                        .planejamentoTreinoEntity(planejamentoTreinoEntity)
+                        .id(treino.getId() != null ? treino.getId() : null)
+                        .descricao(treino.getDescricao())
+                        .build();
+
+                buildExerciseMetrics(treinoItem, treino.getMetricasExercicios());
+
+                return treinoItem;
+            }).toList();
+
+            planejamentoTreinoEntity.setTreinoEntities(treinoEntities);
+
+        }
+
     }
 
-    private List<MetricasExercicioEntitie> buildExerciseMetrics(TreinoEntitie treinoEntitie, List<MetricasExerciciosRequestDto> metricasExercicio) {
-        return metricasExercicio.stream().map(metric -> {
-            MetricasExercicioEntitie metricasExercicioEntitieItem = MetricasExercicioEntitie.builder()
-                    .tempoDescanso(metric.getTempoDescanso())
-                    .series(metric.getSeries())
-                    .repeticoes(metric.getRepeticoes())
-                    .observacao((metric.getObservacao()))
-                    .treinoEntitie(treinoEntitie)
-                    .exercicioEntitie(exercicioService.recuperarPorId(metric.getExercicioId()))
-                    .build();
-            return metricasExercicioEntitieItem;
-        }).collect(Collectors.toList());
+    private void buildExerciseMetrics(TreinoEntity treinoEntitie, List<MetricasExerciciosRequestDto> metricasExercicio) {
+
+        if (!CollectionUtils.isEmpty(metricasExercicio)) {
+
+            List<MetricasExercicioEntity> metricas = metricasExercicio.stream().map(metrica -> MetricasExercicioEntity.builder()
+                    .treinoEntity(treinoEntitie)
+                    .id(metrica.getId() != null ? metrica.getId() : null)
+                    .tempoDescanso(metrica.getTempoDescanso())
+                    .series(metrica.getSeries())
+                    .repeticoes(metrica.getRepeticoes())
+                    .observacao((metrica.getObservacao()))
+                    .exercicioEntity(exercicioService.recuperarPorId(metrica.getExercicioId()))
+                    .build()).toList();
+
+            treinoEntitie.setMetricasExercicio(metricas);
+
+        }
+
     }
 }
